force-app/main/default/objects/Outcome_Event__c/Outcome_Event__c.object-meta.xml
<CustomObject>
    <description>Captures the closing transaction for an episode.</description>
    <label>Outcome Event</label>
    <nameField>
        <label>Outcome Event Number</label>
        <displayFormat>OUT-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>