force-app/main/default/objects/Outcome_Event__c/fields/Animal_Episode__c.field-meta.xml
<CustomField>
    <fullName>Animal_Episode__c</fullName>
    <description>Episode that owns this outcome event.</description>
    <label>Animal Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Outcome Events</relationshipLabel>
    <relationshipName>Outcome_Events</relationshipName>
    <type>MasterDetail</type>
</CustomField>