force-app/main/default/objects/Outcome_Event__c/fields/Destination_Account__c.field-meta.xml
<CustomField>
    <fullName>Destination_Account__c</fullName>
    <description>Destination account captured at outcome.</description>
    <label>Destination Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outcome Events</relationshipLabel>
    <relationshipName>Outcome_Events</relationshipName>
    <type>Lookup</type>
</CustomField>