force-app/main/default/objects/Outcome_Event__c/fields/Destination_Contact__c.field-meta.xml
<CustomField>
    <fullName>Destination_Contact__c</fullName>
    <description>Destination contact captured at outcome.</description>
    <label>Destination Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outcome Event Contacts</relationshipLabel>
    <relationshipName>Outcome_Event_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>