force-app/main/default/objects/Outcome_Event__c/fields/Event_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_DateTime__c</fullName>
    <description>When the outcome was recorded.</description>
    <label>Event Date Time</label>
    <type>DateTime</type>
</CustomField>