force-app/main/default/objects/Outcome_Event__c/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <description>Outcome recorded for the episode.</description>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Outcome_Type</valueSetName>
    </valueSet>
</CustomField>